# samp-cef

./: .gitignore  .rustfmt.toml  Cargo.toml  clientapi.h  deploy.cmd  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
cef/: Cargo.toml
cef-api/: Cargo.toml
cef-api/src/: lib.rs
cef-interface/: Cargo.toml
cef-interface/src/: components.rs  lib.rs
cef-sys/: Cargo.toml  build.rs
cef-sys/src/: bindings.rs  lib.rs
cef-tests/: Cargo.toml
cef-tests/src/: main.rs
cef/src/: app.rs  browser.rs  client.rs  command_line.rs  handlers.rs  lib.rs  process_message.rs  ref_counted.rs  rust_to_c.rs  scheme.rs  task.rs  types.rs  v8.rs
cef/src/handlers/: audio.rs  browser_process.rs  context_menu.rs  lifespan.rs  load.rs  render.rs  render_process.rs  v8handler.rs
cef/src/rust_to_c/: app.rs  audio_handler.rs  browser_process_handler.rs  client.rs  context_menu_handler.rs  lifespan_handler.rs  load_handler.rs  render_handler.rs  render_process_handler.rs  task.rs  v8handler.rs
cef/src/types/: color.rs  list.rs  string.rs
client/: Cargo.toml  build.rs
client/src/: app.rs  audio.rs  browser.rs  cef_app.rs  crash_logger.rs  external.rs  lib.rs  network.rs  render.rs  rodio_audio.rs  static_cell.rs  utils.rs  view.rs
client/src/browser/: assets_scheme.rs  cef.rs  client.rs  manager.rs  view.rs
client/src/old/: application.rs  utils.rs
d3dx9/: Cargo.toml
d3dx9/src/: d3dx9core.rs  d3dx9math.rs  d3dx9shader.rs  d3dx9tex.rs  lib.rs
docs/: build.md  main_en.md  main_ru.md
examples/pwd-prompt/: index.html  mode.pwn
examples/vuejs/: readme.md
loader/: Cargo.toml
loader/src/: lib.rs
messages/: Cargo.toml
messages/src/: lib.rs  packets.rs  proto.rs
messages/src/proto/: packets.rs
network/: Cargo.toml
network/src/: client.rs  lib.rs  server.rs
proto/: packets.proto
renderer/: Cargo.toml
renderer/assets/: extension.js
renderer/src/: main.rs
scripts/: build-client-win32.sh  clippy-win32.sh  test-miri.sh
server/: Cargo.toml  cef.inc
server/src/: client.rs  lib.rs  server.rs  utils.rs
utils/: readme.md  wrapper.h
