[workspace]
members = [
    "cef-sys",
    "cef",
    "loader",
    "client",
    "renderer",
    "messages",
    "server",
    "cef-api",
    "cef-interface",
]

#default-members = [
#    "loader",
#    "client",
#    "renderer",
#    "server",
#    "cef-interface",
#]

[profile.release]
opt-level = "z"
#lto = true
