[package]
name = "client"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rodio_audio"]
rodio_audio = []
crash_logger = ["winapi/processthreadsapi", "winapi/psapi", "winapi/excpt"]

[dependencies]
encoding_rs = "0.8.20"
client-api = { git = "https://github.com/zottce/samp-client-api.git", rev = "d794c11" }
cef = { path = "../cef" }
cef-sys = { path = "../cef-sys" }
crossbeam-channel = "0.5.1"
d3dx9 = { path = "../d3dx9" }
winapi = { version = "0.3.8", features = ["d3d9", "winuser", "libloaderapi", "winver", "consoleapi", "memoryapi", "shlobj"] }
messages = { path = "../messages" }
quick-protobuf = "0.8.0"
detour = { git = "https://github.com/darfink/detour-rs", rev = "3b6f17a" }
libloading = "0.7.0"
alto = "3.0.4"
log = "0.4.14"
simplelog = "0.10.0"
ambisonic = "0.4.1"
nalgebra = "0.29.0"
parking_lot = "0.11.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
net = { path = "../network", package = "network" }
