[package]
name = "client"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2024"
rust-version = "1.93"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rodio_audio"]
rodio_audio = []
crash_logger = ["winapi/processthreadsapi", "winapi/psapi", "winapi/excpt"]

[dependencies]
encoding_rs = "0.8.35"
client-api = { git = "https://github.com/zottce/samp-client-api.git", rev = "886d15e" }
cef = { path = "../cef" }
cef-sys = { path = "../cef-sys" }
crossbeam-channel = "0.5.15"
winapi = { version = "0.3.9", features = ["d3d9", "winuser", "libloaderapi", "winver", "consoleapi", "memoryapi", "shlobj"] }
messages = { path = "../messages" }
quick-protobuf = "0.8.1"
retour = { version = "0.4.0-alpha.4", features = ["thiscall-abi"] }
libloading = "0.9.0"
alto = "3.0.4"
log = "0.4.29"
simplelog = "0.12.2"
ambisonic = "0.4.1"
nalgebra = "0.34.1"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
net = { path = "../network", package = "network" }
region = "3.0.2"
percent-encoding = "2.3.2"
url = "2.5.7"
