[package]
name = "network"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
quinn = "0.11.9"
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
rcgen = "0.14.7"
rustls = "0.23.36"
webpki = "0.22.4"
slotmap = "1.1.1"
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
