[package]
name = "server"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = { git = "https://github.com/zottce/samp-rs.git", branch = "potential-fix", features = ["encoding"] }
laminar = { git = "https://github.com/zottce/laminar.git" }
log = "0.4.6"
crossbeam-channel = "0.3.9"
messages = { path = "../messages" }
quick-protobuf = "0.7.0"
